intentando POST sightings (con cambios en openapi y sightings.schema)
